[gd_scene load_steps=11 format=3 uid="uid://drffjlsqb5lod"]

[ext_resource type="Script" path="res://main.gd" id="1_djg2a"]
[ext_resource type="PackedScene" uid="uid://c4mig7oq5mr0" path="res://ui/spawn_position.tscn" id="2_k22kc"]
[ext_resource type="PackedScene" uid="uid://c7tfhapve43h7" path="res://ui/chat_box.tscn" id="3_egfme"]
[ext_resource type="Script" path="res://ui/control_ui.gd" id="3_hfet8"]
[ext_resource type="PackedScene" uid="uid://be3w7pa3jkbji" path="res://ui/lobby.tscn" id="4_tswso"]
[ext_resource type="PackedScene" uid="uid://cgddotqh6hprh" path="res://ui/scoreboard.tscn" id="5_qiwcw"]
[ext_resource type="PackedScene" uid="uid://xsr3n38kc6wp" path="res://ui/menu.tscn" id="6_xmp4e"]
[ext_resource type="PackedScene" uid="uid://bh6fv7mm72hyf" path="res://ui/send_message.tscn" id="7_w36v2"]
[ext_resource type="PackedScene" uid="uid://nsbux4s4243s" path="res://ui/quit_confirmation.tscn" id="8_k6kgi"]
[ext_resource type="PackedScene" uid="uid://iewn2nwwyp5i" path="res://ui/pause_menu.tscn" id="9_odwst"]

[node name="Main" type="Node"]
script = ExtResource("1_djg2a")

[node name="MapInstance" type="Node" parent="."]
unique_name_in_owner = true

[node name="SpawnPosition" parent="." instance=ExtResource("2_k22kc")]
unique_name_in_owner = true

[node name="Control_UI" type="Control" parent="."]
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_hfet8")
metadata/_edit_lock_ = true

[node name="ChatBox" parent="Control_UI" instance=ExtResource("3_egfme")]
unique_name_in_owner = true
layout_mode = 1
offset_top = -430.0
offset_bottom = 0.0

[node name="Lobby" parent="Control_UI" instance=ExtResource("4_tswso")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_top = 0.0
anchor_bottom = 0.0
offset_top = 0.0
offset_bottom = 182.0
grow_vertical = 1

[node name="Scoreboard" parent="Control_UI" instance=ExtResource("5_qiwcw")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_top = 1.0
offset_top = -123.0
grow_vertical = 0

[node name="Menu" parent="Control_UI" instance=ExtResource("6_xmp4e")]
unique_name_in_owner = true
layout_mode = 1

[node name="SendMessage" parent="Control_UI" instance=ExtResource("7_w36v2")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
offset_left = 0.0
offset_top = -20.5
offset_right = 414.0
offset_bottom = 20.5
grow_horizontal = 1
grow_vertical = 2

[node name="QuitConfirmation" parent="Control_UI" instance=ExtResource("8_k6kgi")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.0
offset_top = -45.5
offset_right = 133.0
offset_bottom = 45.5
metadata/_edit_use_anchors_ = true

[node name="PauseMenu" parent="Control_UI" instance=ExtResource("9_odwst")]
layout_mode = 0

[node name="MultiplayerSpawnerPlayerSpawn" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("../Network/Player")

[node name="MultiplayerSpawnerMapInstance" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://map.tscn")
spawn_path = NodePath("../MapInstance")

[node name="Network" type="Node" parent="."]

[node name="Player" type="Node" parent="Network"]

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
